# all_claude

./: .gitignore  .mcp.json  README.md  agent.py  backlog.md  pyproject.toml
client/: journey.py
docs/: EXPLAINER.md
scripts/: inspect.sh  web.sh
server/: notes_server.py
web/: app.py  index.html
